--- a/doc/doc_master/man/man3/specialAna.hh.3
+++ b/doc/doc_master/man/man3/specialAna.hh.3
@@ -1,4 +1,4 @@
-.TH "specialAna.hh" 3 "Wed Feb 4 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
+.TH "specialAna.hh" 3 "Tue Mar 17 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -39,6 +39,8 @@ specialAna.hh \-
 \fC#include 'Main/Systematics\&.hh'\fP
 .br
 \fC#include 'CutClass\&.hh'\fP
+.br
+\fC#include 'TriggerClass\&.hh'\fP
 .br
 
 .SS "Classes"
